--- a/index.html
+++ b/index.html
@@ -98,45 +98,45 @@
         <div class="heddings">
             <a href="">
                 <img src="./images/2nd row/2a.jpeg" alt="" class="pic-1">
-                <h4>lugages</h4>
+                <h4>Lugages</h4>
             </a>
 
         </div>
         <div class="heddings">
             <a href="">
                 <img src="./images/2nd row/3a.jpeg" alt="" class="pic-1">
-                <h4>lugages</h4>
+                <h4>Sound Syestem</h4>
             </a>
         </div>
         <div class="heddings">
             <a href="">
                 <img src="./images/2nd row/4a.jpeg" alt="" class="pic-1">
-                <h4>lugages</h4>
+                <h4>Jewellary</h4>
             </a>
         </div>
         <div class="heddings">
             <a href="">
                 <img src="./images/2nd row/5a.jpeg" alt="" class="pic-1">
-                <h4>lugages</h4>
+                <h4>T-shirts</h4>
             </a>
         </div>
         <div class="heddings">
             <a href="">
                 <img src="./images/2nd row/6a.jpeg" alt="" class="pic-1">
-                <h4>lugages</h4>
+                <h4>Bed Covers</h4>
             </a>
         </div>
 
         <div class="heddings">
             <a href="">
                <img src="./images/2nd row/7.jpeg" alt="" class="pic-1">
-               <h4>lugages</h4>
+               <h4>Mobiles</h4>
             </a>
         </div>
         <div class="heddings">
             <a href="">
                 <img src="./images/2nd row/8a.jpeg" alt="" class="pic-1">
-                <h4>lugages</h4>
+                <h4>Bed Sheets</h4>
             </a>
         </div>
 
