--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="mainhedder">
         
-        <img src="./images/logo.jpg  " width="100px" height="auto"  alt="" > 
+        <img src="./images/logo.jpg  " height="auto"  alt="" class="logo" > 
         <input type="search" name="" id=""  placeholder="Search for Product,brands and more" class="search">
         <input type="submit" value="Login" class="login" >
         
